--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -19,8 +19,11 @@ jobs:
         ports:
           - 3306:3307
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+
+
+      - name: Checkout
+        uses: actions/checkout@v4.2.2
+      - uses: actions/setup-java@v4.6.0
         with:
           distribution: 'temurin'
           java-version: '17'
