--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -21,18 +21,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4.2.2
+
       - uses: actions/setup-java@v4.6.0
-
-
-
         with:
           distribution: 'temurin'
           java-version: '17'
           cache: 'maven'
-      - name: Build and run test
+
+      - name: Build and run tests
         run: mvn -ntp -B verify
-
-
-
-
-
