--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,7 +18,15 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_PASSWORD: 123456
+          MYSQL_USER: fahadkhan
+          MYSQL_DATABASE: fullstack_development
+        ports:
+          - 3306:3306
     steps:
     - uses: actions/checkout@v4
     - name: Set up JDK 17
