--- a/.github/workflows/backend CI.yml
+++ b/.github/workflows/backend CI.yml
@@ -37,7 +37,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -ntp -B verify
+      run: mvn -ntp -B clean and verify
       # mvn -B package --file pom.xml
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
